--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -89,9 +89,9 @@ jobs:
       run: docker push octopuslabs/terraform-workertools:latest-ubuntu.2004
       if: ${{ needs.get-version-number.outputs.CONTINUE == 'Yes' }}
       
-  build-windows:
+  build-windows-2019:
     needs: [get-version-number]
-    runs-on: windows-latest
+    runs-on: windows-2019
 
     steps:
     - uses: actions/checkout@v2
@@ -121,7 +121,7 @@ jobs:
       if: ${{ needs.get-version-number.outputs.CONTINUE == 'Yes' }}
   
   build-docker-manifest:
-    needs: [build-windows, build-linux, get-version-number]
+    needs: [build-windows-2019, build-linux, get-version-number]
     runs-on: ubuntu-latest
     
     steps:
