--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -14,6 +14,8 @@ jobs:
     outputs:
       VERSION: ${{ steps.step1.outputs.VERSION }}
       CONTINUE: ${{ steps.step1.outputs.Continue }}
+      WIN2019_VERSION: ${{ steps.step1.outputs.WIN2019_VERSION }}
+      WIN2022_VERSION: ${{ steps.step1.outputs.WIN2022_VERSION }}
     steps:    
     - uses: actions/checkout@v3
     - id: step1
@@ -38,7 +40,23 @@ jobs:
         {
             Write-Host "We need to upgrade the container to $versionToCompare"            
             echo "CONTINUE=Yes" >> $env:GITHUB_OUTPUT
-        }      
+        }
+
+        Write-Host "Getting OS versions for windows 2022 and 2019"
+        $win2019_manifest = (docker manifest inspect --verbose "octopuslabs/workertools:latest-windows.2019" | ConvertFrom-Json)
+        $WIN2019_VERSION = $win2019_manifest.Descriptor.Platform.'os.version'
+        Write-Host "WIN2019_VERSION: $WIN2019_VERSION"
+
+        $win2022_manifest = (docker manifest inspect --verbose "octopuslabs/workertools:latest-windows.2022" | ConvertFrom-Json)
+        $WIN2022_VERSION = $win2022_manifest.Descriptor.Platform.'os.version'
+        Write-Host "WIN2022_VERSION: $WIN2022_VERSION"
+
+        if([string]::IsNullOrWhiteSpace($WIN2019_VERSION) -or [string]::IsNullOrWhiteSpace($WIN2022_VERSION)) {
+          throw "Could not establish OS versions for windows 2022 and 2019 needed for docker manifest"
+        }
+
+        echo "WIN2019_VERSION=$WIN2019_VERSION" >> $env:GITHUB_OUTPUT
+        echo "WIN2022_VERSION=$WIN2022_VERSION" >> $env:GITHUB_OUTPUT
       shell: powershell
 
   build-ubuntu:
@@ -53,40 +71,37 @@ jobs:
         USERNAME: ${{ secrets.DOCKER_HUB_USER }}
         PASSWORD: ${{ secrets.DOCKER_HUB_PAT }}
       run: docker login --username $USERNAME --password "$PASSWORD"
+      if: ${{ needs.get-version-number.outputs.CONTINUE == 'Yes' }}
     
-    - name: Build the ubuntu.2004 Docker image 
+    - name: Build the ubuntu.2004 image 
       env:
         VERSION_NUMBER: ${{ needs.get-version-number.outputs.VERSION }}     
       run: docker build ./ubuntu-2004 --tag octopuslabs/terraform-workertools:$VERSION_NUMBER-ubuntu.2004 --tag octopuslabs/terraform-workertools:latest-ubuntu.2004
       if: ${{ needs.get-version-number.outputs.CONTINUE == 'Yes' }}
       
-    - name: Push the ubuntu.2004 version image
+    - name: Push the ubuntu.2004 version-specific image
       env:
         VERSION_NUMBER: ${{ needs.get-version-number.outputs.VERSION }}     
       run: docker push octopuslabs/terraform-workertools:$VERSION_NUMBER-ubuntu.2004
       if: ${{ needs.get-version-number.outputs.CONTINUE == 'Yes' }}
       
-    - name: Push the latest ubuntu.2004 image
-      env:
-        VERSION_NUMBER: ${{ needs.get-version-number.outputs.VERSION }}     
+    - name: Push the ubuntu.2004 latest image   
       run: docker push octopuslabs/terraform-workertools:latest-ubuntu.2004
       if: ${{ needs.get-version-number.outputs.CONTINUE == 'Yes' }}
 
-    - name: Build the ubuntu.2204 Docker image      
+    - name: Build the ubuntu.2204 image      
       env:
         VERSION_NUMBER: ${{ needs.get-version-number.outputs.VERSION }}     
       run: docker build ./ubuntu-2204 --tag octopuslabs/terraform-workertools:$VERSION_NUMBER-ubuntu.2204 --tag octopuslabs/terraform-workertools:latest-ubuntu.2204
       if: ${{ needs.get-version-number.outputs.CONTINUE == 'Yes' }}
       
-    - name: Push the ubuntu.2204 version image
+    - name: Push the ubuntu.2204 version-specific image
       env:
         VERSION_NUMBER: ${{ needs.get-version-number.outputs.VERSION }}     
       run: docker push octopuslabs/terraform-workertools:$VERSION_NUMBER-ubuntu.2204
       if: ${{ needs.get-version-number.outputs.CONTINUE == 'Yes' }}
       
-    - name: Push the latest ubuntu.2204 image
-      env:
-        VERSION_NUMBER: ${{ needs.get-version-number.outputs.VERSION }}     
+    - name: Push the ubuntu.2204 latest image    
       run: docker push octopuslabs/terraform-workertools:latest-ubuntu.2204
       if: ${{ needs.get-version-number.outputs.CONTINUE == 'Yes' }}
       
@@ -102,27 +117,56 @@ jobs:
         USERNAME: ${{ secrets.DOCKER_HUB_USER }}
         PASSWORD: ${{ secrets.DOCKER_HUB_PAT }}
       run: docker login --username ${env:USERNAME} --password "${env:PASSWORD}"
+      if: ${{ needs.get-version-number.outputs.CONTINUE == 'Yes' }}
     
-    - name: Build the win2019 Docker image
+    - name: Build the win2019 image
       env:
         VERSION_NUMBER: ${{ needs.get-version-number.outputs.VERSION }}     
       run: docker build ./windows-2019 --tag octopuslabs/terraform-workertools:${env:VERSION_NUMBER}-windows.2019 --tag octopuslabs/terraform-workertools:latest-windows.2019
       if: ${{ needs.get-version-number.outputs.CONTINUE == 'Yes' }}
       
-    - name: Push the win2019 version image
+    - name: Push the win2019 version-specific image
       env:
         VERSION_NUMBER: ${{ needs.get-version-number.outputs.VERSION }}     
       run: docker push octopuslabs/terraform-workertools:${env:VERSION_NUMBER}-windows.2019
       if: ${{ needs.get-version-number.outputs.CONTINUE == 'Yes' }}
       
-    - name: Push the latest win2019 image
+    - name: Push the win2019 latest image
+      run: docker push octopuslabs/terraform-workertools:latest-windows.2019
+      if: ${{ needs.get-version-number.outputs.CONTINUE == 'Yes' }}
+
+  build-win-2022:
+    needs: [get-version-number]
+    runs-on: windows-2022
+
+    steps:
+    - uses: actions/checkout@v3
+        
+    - name: DockerHub Login
+      env:
+        USERNAME: ${{ secrets.DOCKER_HUB_USER }}
+        PASSWORD: ${{ secrets.DOCKER_HUB_PAT }}
+      run: docker login --username ${env:USERNAME} --password "${env:PASSWORD}"
+      if: ${{ needs.get-version-number.outputs.CONTINUE == 'Yes' }}
+    
+    - name: Build the win2022 image
       env:
         VERSION_NUMBER: ${{ needs.get-version-number.outputs.VERSION }}     
-      run: docker push octopuslabs/terraform-workertools:latest-windows.2019
+      run: docker build ./windows-2022 --tag octopuslabs/terraform-workertools:${env:VERSION_NUMBER}-windows.2022 --tag octopuslabs/terraform-workertools:latest-windows.2022
+      if: ${{ needs.get-version-number.outputs.CONTINUE == 'Yes' }}
+      
+    - name: Push the win2022 version-specific image
+      env:
+        VERSION_NUMBER: ${{ needs.get-version-number.outputs.VERSION }}     
+      run: docker push octopuslabs/terraform-workertools:${env:VERSION_NUMBER}-windows.2022
+      if: ${{ needs.get-version-number.outputs.CONTINUE == 'Yes' }}
+      
+    - name: Push the win2022 latest image
+      run: docker push octopuslabs/terraform-workertools:latest-windows.2022
       if: ${{ needs.get-version-number.outputs.CONTINUE == 'Yes' }}
   
   build-docker-manifest:
-    needs: [get-version-number, build-ubuntu, build-win-2019]
+    needs: [get-version-number, build-ubuntu, build-win-2019, build-win-2022]
     runs-on: ubuntu-latest
     
     steps:
@@ -131,22 +175,42 @@ jobs:
         USERNAME: ${{ secrets.DOCKER_HUB_USER }}
         PASSWORD: ${{ secrets.DOCKER_HUB_PAT }}
       run: docker login --username $USERNAME --password "$PASSWORD"
-      
-    - name: Build Manifest
-      run: docker manifest create octopuslabs/terraform-workertools:latest octopuslabs/terraform-workertools:latest-windows.2019 octopuslabs/terraform-workertools:latest-ubuntu.2004
       if: ${{ needs.get-version-number.outputs.CONTINUE == 'Yes' }}
       
-    - name: Push Manifest
+    - name: Create docker manifest for latest tag
+      run: docker manifest create octopuslabs/terraform-workertools:latest octopuslabs/terraform-workertools:latest-windows.2019 octopuslabs/terraform-workertools:latest-windows.2022 octopuslabs/terraform-workertools:latest-ubuntu.2204
+      if: ${{ needs.get-version-number.outputs.CONTINUE == 'Yes' }}
+
+    - name: Annotate docker manifest for latest tag
+      env:
+        WIN2019_VERSION: ${{ needs.get-version-number.outputs.WIN2019_VERSION }}
+        WIN2022_VERSION: ${{ needs.get-version-number.outputs.WIN2022_VERSION }}
+      run: |
+       docker manifest annotate --os "windows" --os-version "$WIN2019_VERSION" --arch "amd64" "octopuslabs/terraform-workertools:latest" "octopuslabs/terraform-workertools:latest-windows.2019" && \
+       docker manifest annotate --os "windows" --os-version "$WIN2022_VERSION" --arch "amd64" "octopuslabs/terraform-workertools:latest" "octopuslabs/terraform-workertools:latest-windows.2022"
+      if: ${{ needs.get-version-number.outputs.CONTINUE == 'Yes' }}
+      
+    - name: Push docker manifest for latest tag
       run: docker manifest push octopuslabs/terraform-workertools:latest
       if: ${{ needs.get-version-number.outputs.CONTINUE == 'Yes' }}
       
-    - name: Build Version Manifest
+    - name: Create docker manifest for version-specific tag
       env:
         VERSION_NUMBER: ${{ needs.get-version-number.outputs.VERSION }}     
-      run: docker manifest create octopuslabs/terraform-workertools:$VERSION_NUMBER octopuslabs/terraform-workertools:$VERSION_NUMBER-windows.2019 octopuslabs/terraform-workertools:$VERSION_NUMBER-ubuntu.2004
+      run: docker manifest create octopuslabs/terraform-workertools:$VERSION_NUMBER octopuslabs/terraform-workertools:$VERSION_NUMBER-windows.2019 octopuslabs/terraform-workertools:$VERSION_NUMBER-windows.2022 octopuslabs/terraform-workertools:$VERSION_NUMBER-ubuntu.2204
+      if: ${{ needs.get-version-number.outputs.CONTINUE == 'Yes' }}
+
+    - name: Annotate docker manifest for version-specific tag
+      env:
+        VERSION_NUMBER: ${{ needs.get-version-number.outputs.VERSION }}  
+        WIN2019_VERSION: ${{ needs.get-version-number.outputs.WIN2019_VERSION }}
+        WIN2022_VERSION: ${{ needs.get-version-number.outputs.WIN2022_VERSION }}
+      run: |
+        docker manifest annotate --os "windows" --os-version "$WIN2019_VERSION" --arch "amd64" "octopuslabs/terraform-workertools:$VERSION_NUMBER" "octopuslabs/terraform-workertools:$VERSION_NUMBER-windows.2019" && \
+        docker manifest annotate --os "windows" --os-version "$WIN2022_VERSION" --arch "amd64" "octopuslabs/terraform-workertools:$VERSION_NUMBER" "octopuslabs/terraform-workertools:$VERSION_NUMBER-windows.2022"
       if: ${{ needs.get-version-number.outputs.CONTINUE == 'Yes' }}
       
-    - name: Push Version Manifest
+    - name: Push docker manifest for version-specific tag
       env:
         VERSION_NUMBER: ${{ needs.get-version-number.outputs.VERSION }}     
       run: docker manifest push octopuslabs/terraform-workertools:$VERSION_NUMBER
